# wire-img

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
api/: Cargo.toml  settings.toml
api/src/: config.rs  file_watcher.rs  main.rs
configuration/: Cargo.toml
configuration/src/: config.rs  lib.rs
image/: Cargo.toml
image/src/: lib.rs  transcoder.rs
resources/: img.html
storage/: Cargo.toml
storage/src/: disk.rs
