[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json", "http2", "multipart", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }
