[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace=true}
image = { version = "0.25.1", features = ["avif-native"] }
serde = { version = "1.0.209", features = ["derive"] }
tracing.workspace = true
