[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.0", features = ["v7"] }

[dev-dependencies]
rand = "0.8.5"
